# crawlspace

./: .containerignore  .gitignore  Cargo.toml  Containerfile  DEFAULT_LICENSE  README.md  flake.nix  hub.slime  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  container.yml
assets/: registries.json
crawlspace/: Cargo.toml
crawlspace-macro/: Cargo.toml
crawlspace-macro/src/: lib.rs
crawlspace-proto/: Cargo.toml
crawlspace-proto-1_8/: Cargo.toml
crawlspace-proto-1_8/src/: lib.rs
crawlspace-proto/src/: lib.rs
crawlspace-proto/src/datatypes/: impls.rs  position.rs  slot.rs  string.rs  text_component.rs  variable.rs
crawlspace/assets/: registries.json  tags.json
crawlspace/src/: main.rs  state.rs
crawlspace/src/net/: cache.rs  mod.rs  player.rs
crawlspace/src/protocol/: decoder.rs  encoder.rs  mod.rs
crawlspace/src/protocol/datatypes/: impls.rs  slot.rs  string.rs  variable.rs
crawlspace/src/protocol/packets/login/: config.rs  handshake.rs  login.rs  status.rs
crawlspace/src/protocol/packets/login/registry/: biome.rs  chat.rs  damage.rs  dimension.rs  mod.rs  tags.rs
crawlspace/src/protocol/packets/play/: container.rs  game_event.rs  interactions.rs  keepalive.rs  login.rs  position.rs  status.rs  teleport.rs  tick.rs  world.rs
crawlspace/src/server/: mod.rs  ticker.rs
crawlspace/src/world/: block_entity.rs  blocks.rs  container.rs  mod.rs
src/: args.rs  main.rs  state.rs
src/net/: cache.rs  entity.rs  io.rs  mod.rs  player.rs
src/protocol/: decoder.rs  encoder.rs  mod.rs
src/protocol/datatypes/: ident.rs  impls.rs  position.rs  slot.rs  string.rs  text_component.rs  variable.rs
src/protocol/packets/: config.rs  handshake.rs  login.rs  status.rs
src/protocol/packets/login/: config.rs  handshake.rs  login.rs  registry.rs  status.rs
src/protocol/packets/login/registry/: banner.rs  biome.rs  chat.rs  damage.rs  dimension.rs  mod.rs  painting.rs  tags.rs  trim.rs  wolf.rs
src/protocol/packets/play/: container.rs  game_event.rs  interactions.rs  keepalive.rs  login.rs  position.rs  status.rs  teleport.rs  tick.rs  world.rs
src/server/: mod.rs  player.rs  registries.rs  ticker.rs  window.rs  world.rs
src/world/: block_entity.rs  blocks.rs  cache.rs  container.rs  mod.rs
