# Copyright (c) 2024 Andrew Brower. 
# This file is part of Crawlspace.
#
# Crawlspace is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public
# License as published by the Free Software Foundation, either
# version 3 of the License, or (at your option) any later version.
#
# Crawlspace is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with Crawlspace. If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "crawlspace"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
aes = "0.8.4"
byteorder = "1.5.0"
bytes = "1.8.0"
cfb8 = "0.8.1"
color-eyre = "0.6.3"
parking_lot = "0.12.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.11.0"
