# Copyright (c) 2024 Andrew Brower. 
# This file is part of Crawlspace.
#
# Crawlspace is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public
# License as published by the Free Software Foundation, either
# version 3 of the License, or (at your option) any later version.
#
# Crawlspace is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with Crawlspace. If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "crawlspace"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
crawlspace-macro = { path = "../crawlspace-macro" }

aes = { version = "0.8.4", optional = true }
bit-vec = "0.8.0"
bitfield-struct = "0.9.2"
byteorder = "1.5.0"
bytes = "1.8.0"
cfb8 = { version = "0.8.1", optional = true }
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.3"
fastanvil = { git = "https://github.com/owengage/fastnbt.git" }
fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
thiserror = "1.0.65"
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.11.0"
slimeball-lib = { git = "https://github.com/xoogware/slimeball.git" }

[features]
default = []
compression = []
encryption = ["dep:cfb8", "dep:aes"]
modern_art = []
lan = []
timings = []

full = ["compression", "encryption"]
